--- a/css/main.css
+++ b/css/main.css
@@ -39,12 +39,13 @@ video {
 
 header {
     padding: 2rem 1rem;
-    max-width: 700px;
+    max-width: 750px;
     width: 100%;
     margin: 0 auto;
     margin-bottom: 2rem;
     z-index: 1;
 }
+
 
 nav {
     display: flex;
@@ -139,6 +140,12 @@ main {
     padding: 1rem;
     margin-bottom: 1rem;
     border-radius: 0.5rem; 
+    cursor: pointer;
+}
+
+.task:hover {
+    opacity: 92%;
+    background-color: black;
 }
 
 .content {
@@ -152,6 +159,7 @@ main {
     display: block;
     transition: 0.4s;
     background-color: transparent;
+    cursor: pointer;
 }
 
 .text:not(:read-only) {
@@ -180,6 +188,16 @@ main {
 
 .delete {
     color: crimson;
+}
+
+
+.link   {
+    /* position: absolute; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    font-size: 2rem;
 }
 
 
