--- a/main.css
+++ b/main.css
@@ -38,7 +38,7 @@ video {
 }
 
 header {
-    padding: 2rem 1rem;
+    padding: 1rem 1rem;
     max-width: 750px;
     width: 100%;
     margin: 0 auto;
@@ -117,6 +117,7 @@ main {
 #tasks {
     display: flex;
     align-items: center;
+    padding: 0 20px;
 }
 
 #tasks h1 {
@@ -196,8 +197,14 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100px;
-    font-size: 2rem;
+    width: 80px;
+    font-size: 1rem;
+    font-family: sans-serif;
+    padding: 10px;
+    margin: 0 3px;
+    text-decoration: none;
+    color: var(--dark);
+    font-weight: 700;
 }
 
 
